new: fixed the timezone and started declaring the necessarie variables and preparing for saving in the csv file.

--- a/addContact.html
+++ b/addContact.html
@@ -53,7 +53,7 @@
 
         <div id="form1">
           <form action="addContact.php">
-            Web page URL: <input type="text" name="fName" value="">
+            Web page URL: <input type="text" name="blazerId" value="">
             <br>
             Grade: <select name="cars">
               <option value="one">1</option>
@@ -62,7 +62,7 @@
               <option value="four">4</option>
               <option value="five">5</option>
             </select><br>
-            Comments: <input type="text" name="webpagecomments" value="">
+            Comments: <input type="text" name="totalTime" value="">
             <br>
             <br>
             <input type="submit" value="Submit">
