new: improved the data variables described to adhere with the requirements.

--- a/projectdata.html
+++ b/projectdata.html
@@ -52,17 +52,18 @@
         <h2>Submit your grade</h2>
 
         <div id="form1">
-          <form action="addContact.php">
-            Web page URL: <input type="text" name="blazerId" value="">
+          <form action="projectdata.php">
+            BlazerID: <input type="text" name="blazerId" value="">
             <br>
-            Grade: <select name="cars">
+            Team Number: <select name="cars">
               <option value="one">1</option>
               <option value="two">2</option>
               <option value="three">3</option>
               <option value="four">4</option>
               <option value="five">5</option>
+              <option value="five">6</option>
             </select><br>
-            Comments: <input type="text" name="totalTime" value="">
+            Total time: <input type="text" name="totalTime" value="">
             <br>
             <br>
             <input type="submit" value="Submit">
