new: added the stylesheet for the page and the started to modify the page.

--- a/projectdata.html
+++ b/projectdata.html
@@ -10,42 +10,20 @@
     <body>
       <main>
         <div>
-        <h1>Grading Web Pages</h1>
-
-        <p>You can find bellow a table that explains each grade that can be assigned for a web page of your choice.</p>
+        <h1>Software Project Teams Data Collection</h1>
         
-        <h2>Rubric for Grading Table</h2>
+        <h2>Rubric for Required Input Fields Table</h2>
 
         <table style="width:100%">
           <tr>
-            <th>Points</th>
-            <th>Phrase</th> 
+            <th>Field</th>
+            <th>Example</th> 
             <th>Detailed Definition</th>
           </tr>
           <tr>
-            <td>5</td>
+            <td>BlazerID</td>
             <td>Outstanding</td>
-            <td>Matches the target audience, very fast to load, the information is clear, it works on mobile devices, fonts easy to read, good contrast, style consistent.</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Very good</td>
-            <td>Matches the target audience, fast to load, the information is clear, it works on mobile devices, style consistent.</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Regular</td>
-            <td>Matches the target audience, not so fast to load, the information is not so clear, it works on mobile devices, style consistent.</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Bad</td>
-            <td>Does not match the target audience, slow to load, the information is not clear, it does not work on mobile devices, style not consistent.</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Very bad</td>
-            <td>Does not match the target audience, very slow to load, the information is not clear, it does not work on mobile devices, fonts not easy to read, bad contrast, style not consistent.</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
           </tr>
         </table>
 
