new: fixed some other variables displays and added links to print the report.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <form action="projectdata.php">
             BlazerID: <input type="text" name="blazerId" value="">
             <br>
-            Team Number: <select name="cars">
+            Team Number: <select name="teamNumber">
               <option value="one">1</option>
               <option value="two">2</option>
               <option value="three">3</option>
@@ -44,15 +44,15 @@
             <br>
             Total time: <input type="text" name="totalTime" value="">
             <br>
-            Analysis and Design %: <input type="text" name="totalTime" value="">
+            Analysis and Design %: <input type="text" name="analysisAndDesign" value="">
             <br>
-            Coding %: <input type="text" name="totalTime" value="">
+            Coding %: <input type="text" name="coding" value="">
             <br>
-            Testing %: <input type="text" name="totalTime" value="">
+            Testing %: <input type="text" name="testing" value="">
             <br>
-            Meeting %: <input type="text" name="totalTime" value="">
+            Meeting %: <input type="text" name="meeting" value="">
             <br>
-            Testing %: <input type="text" name="totalTime" value="">
+            Testing %: <input type="text" name="other" value="">
             <br>
             <br>
             <input type="submit" value="Submit">
