new: fixing one label name and added new table lines for the field explanation.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,34 @@
             <td>firstnameln</td>
             <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
           </tr>
+          <tr>
+            <td>BlazerID</td>
+            <td>firstnameln</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+          </tr>
+          <tr>
+            <td>BlazerID</td>
+            <td>firstnameln</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+          </tr>
+          <tr>
+            <td>BlazerID</td>
+            <td>firstnameln</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+          </tr>
+          <tr>
+            <td>BlazerID</td>
+            <td>firstnameln</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+          </tr>
+          <tr>
+            <td>BlazerID</td>
+            <td>firstnameln</td>
+            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+          </tr>
         </table>
 
-        <h2>Submit your grade</h2>
+        <h2>Submit your software project information</h2>
 
         <div id="form1">
           <form action="projectdata.php">
