--- a/index.html
+++ b/index.html
@@ -26,29 +26,39 @@
             <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
           </tr>
           <tr>
-            <td>BlazerID</td>
-            <td>firstnameln</td>
-            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+            <td>Team number</td>
+            <td>1</td>
+            <td>The number of the team of your project.</td>
           </tr>
           <tr>
-            <td>BlazerID</td>
-            <td>firstnameln</td>
-            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+            <td>Total time</td>
+            <td>5</td>
+            <td>The total time in tenths of hours that your project has taken.</td>
           </tr>
           <tr>
-            <td>BlazerID</td>
-            <td>firstnameln</td>
-            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+            <td>Analysis and Design %</td>
+            <td>20%</td>
+            <td>The percentage of the analysis and design time that your project took from the total time.</td>
           </tr>
           <tr>
-            <td>BlazerID</td>
-            <td>firstnameln</td>
-            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+            <td>Coding %</td>
+            <td>40%</td>
+            <td>The percentage of the coding time that your project took from the total time.</td>
           </tr>
           <tr>
-            <td>BlazerID</td>
-            <td>firstnameln</td>
-            <td>The identification number provided by UAB for each student at the moment of the first enrolment.</td>
+            <td>Testing %</td>
+            <td>20%</td>
+            <td>The percentage of the testing time that your project took from the total time.</td>
+          </tr>
+          <tr>
+            <td>Meeting %</td>
+            <td>10%</td>
+            <td>The percentage of the meeting time that your project took from the total time.</td>
+          </tr>
+          <tr>
+            <td>Other %</td>
+            <td>10%</td>
+            <td>The percentage of other tasks time that your project took from the total time.</td>
           </tr>
         </table>
 
@@ -77,7 +87,7 @@
             <br>
             Meeting %: <input type="text" name="meeting" value="">
             <br>
-            Testing %: <input type="text" name="other" value="">
+            Other %: <input type="text" name="other" value="">
             <br>
             <br>
             <input type="submit" value="Submit">
