new: added in html validation for empty fields and started the report.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div id="form1">
           <form action="projectdata.php">
-            BlazerID: <input type="text" name="blazerId" value="">
+            BlazerID: <input type="text" name="blazerId" value="" required>
             <br>
             Team Number: <select name="teamNumber">
               <option value="one">1</option>
@@ -77,17 +77,17 @@
               <option value="five">6</option>
             </select>
             <br>
-            Total time: <input type="text" name="totalTime" value="">
+            Total time: <input type="text" name="totalTime" value="" required>
             <br>
-            Analysis and Design %: <input type="text" name="analysisAndDesign" value="">
+            Analysis and Design %: <input type="text" name="analysisAndDesign" value="" required>
             <br>
-            Coding %: <input type="text" name="coding" value="">
+            Coding %: <input type="text" name="coding" value="" required>
             <br>
-            Testing %: <input type="text" name="testing" value="">
+            Testing %: <input type="text" name="testing" value="" required>
             <br>
-            Meeting %: <input type="text" name="meeting" value="">
+            Meeting %: <input type="text" name="meeting" value="" required>
             <br>
-            Other %: <input type="text" name="other" value="">
+            Other %: <input type="text" name="other" value=""required>
             <br>
             <br>
             <input type="submit" value="Submit">
